# taboot

./: .dockerignore  .env.example  .env.local.example  .envrc  .gitignore  .mcp.json  .mypy_errors.txt  .pre-commit-config.yaml  AGENTS.md  API_ANALYSIS_INDEX.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  ERROR_HANDLING_AUDIT_PR5.md  Makefile  NEO4J_REFACTOR.md  PHASE1_COMPLETION_REPORT.md  README.md  TDD_IMPLEMENTATION_PLAN_URL_FILTERING.md  TODO_MYPY.md  TODO_RUFF.md  alembic.ini  debug_firecrawl_params.py  docker-compose.yaml  neo4j_task_verification.md  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sentry.client.config.ts  sentry.server.config.ts  sitecustomize.py  tasks.md  turbo.json  validate_phase1.py
.claude/: settings.json
.github/workflows/: docker-build.yml  web-test.yml
.specify/memory/: constitution.md
.todos/: todos.md
alembic/: __init__.pyi
alembic/versions/: 57e233e31a2a_initial_schema.py
apps/: __init__.py
apps/api/: .dockerignore  API_QUICK_REFERENCE.md  CLAUDE.md  Dockerfile  README.md  __init__.py  app.py  openapi.yaml  pyproject.toml
apps/api/docs/: API.md  API_EXAMPLES.md  API_QUICK_REFERENCE.md  BACKPRESSURE_RATELIMITING.md  DATA_GOVERNANCE.md  JOB_LIFECYCLE.md  MIGRATIONS.md  OBSERVABILITY.md  RUNBOOK.md  SECURITY_MODEL.md
apps/api/middleware/: __init__.py  jwt_auth.py  logging.py  metrics.py
apps/api/routes/: documents.py  extract.py  ingest.py  init.py  metrics.py  query.py  status.py
apps/api/schemas/: __init__.py
apps/cli/: CLAUDE.md  README.md  __init__.py  main.py  pyproject.toml
apps/cli/commands/: extract_pending.py  extract_reprocess.py  extract_status.py  graph.py  ingest_docker_compose.py  ingest_elasticsearch.py  ingest_github.py  ingest_gmail.py  ingest_reddit.py  ingest_swag.py  ingest_web.py  ingest_youtube.py  init.py  list_documents.py  query.py  status.py
apps/cli/taboot_cli/: __init__.py  main.py
apps/cli/taboot_cli/commands/: __init__.py  extract_pending.py  extract_reprocess.py  extract_status.py  graph.py  ingest_docker_compose.py  ingest_elasticsearch.py  ingest_github.py  ingest_gmail.py  ingest_reddit.py  ingest_swag.py  ingest_web.py  ingest_youtube.py  init.py  list_documents.py  migrate.py  query.py  schema.py  status.py
apps/cli/taboot_cli/services/: __init__.py
apps/cli/taboot_cli/utils/: __init__.py  async_wrapper.py
apps/mcp/: CLAUDE.md  README.md  pyproject.toml  server.py
apps/mcp/taboot_mcp/: __init__.py  server.py
apps/rerank/: __init__.py  app.py  config.py  service.py
apps/web/: .dockerignore  .env.example  ANALYTICS.md  ANALYTICS_EXAMPLES.md  CLAUDE.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  components.json  eslint.config.js  middleware.ts  next.config.mjs  package.json  postcss.config.mjs  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/worker/: __init__.py  main.py  pyproject.toml
docker/: neo4j.Dockerfile
docker/api/: Dockerfile
docker/app/: Dockerfile  supervisord.conf
docker/neo4j/: Dockerfile
docker/postgres/: Dockerfile  nuq.sql
docker/reranker/: Dockerfile  app.py
docker/web/: Dockerfile
docker/worker/: Dockerfile
docs/: .env.example  ADMIN_OPERATIONS.md  ANALYTICS_IMPLEMENTATION.md  ARCHITECTURE.md  CONFIGURATION.md  CSRF_SECURITY_IMPROVEMENTS.md  DEPLOYMENT_COMPLETE.md  FIRECRAWL_URL_FILTERING.md  IMPLEMENTATION_SUMMARY_RATE_LIMITING.md  INIT.md  INVESTIGATION_INDEX.md  MAKEFILE_REFERENCES.md  MULTILINGUAL_CRAWLING_BEST_PRACTICES.md  NEO4J_COURSE_CORRECTION.md  NEO4J_QUERY_PATTERNS.md  NOTEBOOKLM_SPEC.md  NOTEBOOKLM_UI_SPEC.md  PERFORMANCE_TUNING.md  PHASE3_INVESTIGATION_FINDINGS.md  PIPELINE_INVESTIGATION_REPORT.md  POSTGRESQL_ANALYSIS.md  SOFT_DELETE_CONTEXT.md  SOFT_DELETE_CONTEXT_MIDDLEWARE.md  TECH_STACK_SUMMARY.md  TESTING.md  WEB_APP_IMPROVEMENTS.md  api.md  architecture.md  config.example.yaml  configuration.md  neo4j-graph-patterns-research.md  qdrant-high-throughput-optimization.md  scope.md  setup.md  tabootcrawl.yaml  usage.md
docs/SESSIONS/: 2025-10-22-integration-test-fixes.md  session-2025-10-23-quality-improvements.md  session-memory-system-implementation-20251023.md
docs/adrs/: 0001-adopt-neo4j.md  0002-select-qwen3-llms.md  0003-three-tier-extraction.md
docs/investigations/: AUDIT_SUMMARY.md  CODE_REVIEW_RESOLUTION_SUMMARY.md  CSRF_XSS_RISKS.md  DEPLOYMENT_COMPLETE.md  DOCKERFILE_AUDIT.md  DOCKERFILE_AUDIT_INDEX.md  DOCKERFILE_CRITICAL_FIXES.md  DOCKERFILE_ISSUES_MATRIX.md  DOCKERFILE_QUICK_REFERENCE.md  DOCKERFILE_SUMMARY.txt  DOCKER_ARCHITECTURE_VISUAL.md  DOCKER_COMPOSE_ANALYSIS.md  DOCKER_FIXES_QUICK_REFERENCE.md  DOCKER_INVESTIGATION_INDEX.md  ENVIRONMENT_VARIABLES_AUDIT.md  ENVIRONMENT_VARIABLES_REFERENCE.md  EVALUATION_PLAN.md  IMPLEMENTATION_SUMMARY_RATE_LIMITING.md  INFRASTRUCTURE_AUDIT_INDEX.md  INFRASTRUCTURE_AUDIT_REPORT.md  INFRASTRUCTURE_QUICK_FIX_GUIDE.md  INFRASTRUCTURE_VISUAL_SUMMARY.md  INVESTIGATION_INDEX.md  PIPELINE_MATURITY_SUMMARY.md  POSTGRESQL_ANALYSIS.md  RATE_LIMITING_POSTURE_RECONCILIATION.md  SECURITY_AUDIT_INDEX.md  SESSION_2025-10-22_integration_tests_fix.md  WEB_APP_IMPROVEMENTS.md  codebase_analysis.md  dockerignore-build-context-analysis.md
docs/plans/: 2025-10-23-api-production-readiness.md  implement-pr5-security-fixes-plan.md
docs/security/: AUDIT_SQL_INJECTION_AUDIT_LOG.md  TODO_003_RESOLUTION.md
docs/sessions/: 2025-10-22-phase11-polish.md
fastapi/: __init__.pyi
ollama/: __init__.pyi
packages-ts/api-client/: README.md  package.json  (+1 more)
postgres/: nuq.sql
psycopg2/: __init__.pyi  extensions.pyi  extras.pyi  pool.pyi
pydantic/: __init__.pyi
pydantic_settings/: __init__.pyi
pytest/: __init__.pyi
pythonjsonlogger/: json.pyi
scripts/: auth_helper.py  cleanup_non_english_docs.py  generate_openapi.py
sentence_transformers/: __init__.pyi
tenacity/: __init__.pyi
tests/: __init__.py  conftest.py  test_language_filter.py
tiktoken/: __init__.pyi
torch/: __init__.pyi
typer/: __init__.pyi
yaml/: __init__.pyi
(+366 files in other folders)
