[project]
name = "llamacrawl"
version = "0.1.0"
description = "Multi-source RAG pipeline built on LlamaIndex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.10.0",
    "llama-index-readers-web>=0.1.0",
    "llama-index-readers-github>=0.1.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-graph-stores-neo4j>=0.2.0",
    "claude-agent-sdk>=0.1.0",
    "anyio>=3.0.0",
    "qdrant-client>=1.7.0",
    "neo4j>=5.15.0",
    "redis>=5.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.0",
    "firecrawl-py>=0.0.10",
    "PyGithub>=2.1.0",
    "praw>=7.7.0",
    "elasticsearch>=8.11.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "httpx>=0.25.0",
    "llama-index-storage-docstore-redis>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-docker>=2.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "faker>=20.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-pyyaml>=6.0.0",
    "types-redis>=4.6.0",
]

[project.scripts]
llamacrawl = "llamacrawl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Fast unit tests with mocked dependencies",
    "integration: Integration tests requiring Docker services",
    "slow: Long-running tests (>5s)",
    "gmail: Gmail-specific tests (requires credentials)",
    "github: GitHub-specific tests (requires token)",
    "reddit: Reddit-specific tests (requires credentials)",
    "elasticsearch: Elasticsearch-specific tests",
    "firecrawl: Firecrawl-specific tests",
]
addopts = "-v --tb=short --strict-markers"

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-docker>=3.2.3",
    "pytest-mock>=3.15.1",
    "responses>=0.25.8",
]
