[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taboot-cli"
version = "0.4.0"
description = "Taboot Typer CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jacob Magar", email = "jmagar@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
  "typer>=0.19.2",
  "rich>=13.9.1",
  "pydantic>=2.12.0",
  "python-dotenv>=1.1.1",
  "python-json-logger>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[project.scripts]
taboot = "taboot_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["taboot_cli"]
