[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taboot-worker"
version = "0.4.0"
description = "Taboot background extraction worker"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jacob Magar", email = "jmagar@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
  "redis>=5.0.1,<6",
  "psycopg2-binary>=2.9.11,<3",
  "pydantic>=2.12.0,<3",
  "python-dotenv>=1.1.1,<2",
  "python-json-logger>=4.0.0,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps.worker"]
